# RustDirStat

./: Cargo.toml  README.MD
.github/: FUNDING.yml
docs/: EXAMPLES.md  MULTI_FRONTEND_ARCHITECTURE.md  PHILOSOPHY.MD
src/: lib.rs  main.rs
