[package]
name = "ferris-scan"
version = "0.1.0"
edition = "2021"
authors = ["vnilabean"]
description = "A blazingly fast disk usage analyzer written in Rust"
license = "MIT"

[lib]
name = "ferris_scan"
path = "src/lib.rs"

# ============================================================================
# FEATURE FLAGS: "Open Source Code, Paid Binaries" Business Model
# ============================================================================
# - Default build (free): Core scanning functionality only
# - Pro build: Includes data export (CSV) and advanced features
#
# To build Pro version:
#   cargo build --release --features pro
# ============================================================================

[features]
default = []
pro = ["dep:serde", "dep:csv"]

[dependencies]
# Filesystem traversal (high-performance parallel scanning)
jwalk = "0.8.1"

# Parallel processing
rayon = "1.11.0"

# Terminal UI
ratatui = "0.30.0"
crossterm = "0.29.0"

# Error handling
anyhow = "1.0.100"

# Pro-only dependencies (gated behind 'pro' feature)
serde = { version = "1.0.228", features = ["derive"], optional = true }
csv = { version = "1.3.1", optional = true }

[dev-dependencies]
tempfile = "3.24.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
